# wayland

./: .gate.sh  .gitignore  .launch-ledger.md  .oxlintrc.json  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  REBRANDING.md  THIRD-PARTY-NOTICES.md  WHATS_NEW.md  electron-builder.yml  electron.vite.config.ts  justfile  package.json  readme.md  tsconfig.json  vite.renderer.config.ts  vitest.config.ts
crates/wcore-pluginsrc/: Cargo.toml
crates/wcore-pluginsrc/src/: adapter.rs  claude_code.rs  error.rs  lib.rs  mcp_registry.rs  model.rs  plan.rs  scan.rs
crates/wcore-pluginsrc/tests/: claude_code_lower.rs  conformance.rs  install_commit.rs
wayland-core/crates/wcore-agents-pack/: Cargo.toml
wayland-core/crates/wcore-agents-pack/cases/: architect.json  brand-strategist.json  copywriter.json  debugger.json  deep-researcher.json  deploy-pilot.json  fact-checker.json  humanizer.json  incident-commander.json  qa-engineer.json  refactor-buddy.json  security-auditor.json  technical-writer.json
wayland-core/crates/wcore-agents-pack/src/: bench.rs  lib.rs  manifests.rs
wayland-core/crates/wcore-agents-pack/templates/agents/: architect.toml  brand-strategist.toml  copywriter.toml  debugger.toml  deep-researcher.toml  deploy-pilot.toml  fact-checker.toml  humanizer.toml  incident-commander.toml  qa-engineer.toml  refactor-buddy.toml  security-auditor.toml  technical-writer.toml
wayland-core/crates/wcore-browser/: Cargo.toml
wayland-core/crates/wcore-browser/src/: aria.rs  op.rs  policy.rs  provider.rs  readability.rs
wayland-core/crates/wcore-browser/src/backends/: chromium.rs  mod.rs
wayland-core/crates/wcore-browser/tests/: chromium_live_test.rs  op_enum_test.rs  policy_test.rs  provider_trait_test.rs  timeout_and_cancel_test.rs
wayland-core/crates/wcore-browser/tests/fixtures/: hello.html
wayland-core/crates/wcore-channel-slack/: Cargo.toml
wayland-core/crates/wcore-channel-slack/schemas/: slack.json
wayland-core/crates/wcore-channel-slack/src/: auth.rs  config.rs  error.rs
wayland-core/crates/wcore-channel-sms/: Cargo.toml
wayland-core/crates/wcore-channel-sms/src/: api.rs  config.rs  error.rs  inbound.rs
wayland-core/crates/wcore-channel-sms/src/schemas/: sms.json
wayland-core/crates/wcore-channel-whatsapp/: Cargo.toml
wayland-core/crates/wcore-channel-whatsapp/schemas/: whatsapp.json
wayland-core/crates/wcore-channel-whatsapp/src/: config.rs  error.rs  inbound.rs
wayland-core/crates/wcore-channels-registry/: Cargo.toml
wayland-core/crates/wcore-egress/: Cargo.toml
wayland-core/crates/wcore-egress/src/: policy.rs  request.rs
wayland-core/crates/wcore-eval/: Cargo.toml  README.md
wayland-core/crates/wcore-eval/data/bench/: arith-01-add-small.yaml  arith-02-multiply.yaml  arith-03-subtract-negative.yaml  arith-04-divide-exact.yaml  arith-05-percent.yaml  arith-06-power.yaml  arith-07-decimal-sum.yaml  arith-08-modulo.yaml  fileops-01-create-hello.yaml  fileops-02-append-line.yaml  fileops-03-rename-file.yaml  fileops-04-make-subdir.yaml  fileops-05-delete-file.yaml  fileops-06-replace-line.yaml  recall-01-capital-france.yaml  recall-02-chemical-symbol-gold.yaml  recall-03-largest-planet.yaml  recall-04-author-1984.yaml  recall-05-rust-extension.yaml  recall-06-http-not-found.yaml  recall-07-water-formula.yaml  recall-08-speed-light-units.yaml  routing-01-read-file.yaml  routing-02-grep-pattern.yaml  routing-03-bash-uname.yaml  routing-04-write-new-file.yaml  routing-05-edit-existing.yaml  routing-06-glob-filenames.yaml  routing-07-read-vs-grep.yaml  routing-08-bash-vs-write.yaml
wayland-core/crates/wcore-eval/data/corpus/: bad-descbody-1.yaml  bad-descbody-2.yaml  bad-descbody-3.yaml  bad-disallowed-1.yaml  bad-disallowed-2.yaml  bad-disallowed-3.yaml  bad-empty-when-1.yaml  bad-empty-when-2.yaml  bad-empty-when-3.yaml  bad-namemismatch-1.yaml  bad-namemismatch-2.yaml  bad-namemismatch-3.yaml  bad-noargs-1.yaml  bad-noargs-2.yaml  bad-noargs-3.yaml  bad-offtopic-1.yaml  bad-offtopic-2.yaml  bad-offtopic-3.yaml  bad-oversize-1.yaml  bad-oversize-2.yaml  bad-oversize-3.yaml  bad-stalemodel-1.yaml  bad-stalemodel-2.yaml  bad-stalemodel-3.yaml  bad-truncated-1.yaml  bad-truncated-2.yaml  bad-truncated-3.yaml  bad-utf8-1.yaml  bad-utf8-2.yaml  bad-utf8-3.yaml  good-baseline-hello.yaml  good-desc-1.yaml  good-desc-2.yaml  good-desc-3.yaml  good-desc-4.yaml  good-desc-5.yaml  good-model-1.yaml  good-model-2.yaml  good-model-3.yaml  good-model-4.yaml  (+20 more)
wayland-core/crates/wcore-eval/data/skills/: hello-baseline.md  hello-desc-1.md  hello-desc-2.md  hello-desc-3.md  hello-desc-4.md  hello-desc-5.md  hello-descbody-1.md  hello-descbody-2.md  hello-descbody-3.md  hello-disallowed-1.md  hello-disallowed-2.md  hello-disallowed-3.md  hello-empty-when-1.md  hello-empty-when-2.md  hello-empty-when-3.md  hello-model-1.md  hello-model-2.md  hello-model-3.md  hello-model-4.md  (+41 more)
wayland-core/crates/wcore-eval/src/: bench.rs  corpus.rs  error.rs  lib.rs  report.rs
wayland-core/crates/wcore-eval/tests/: acceptance_gate.rs  bench_corpus_load.rs  cli_smoke.rs  corpus_load.rs  crate_exists.rs  harness_smoke.rs  locked_constants_test.rs
wayland-core/crates/wcore-evolve/: Cargo.toml
wayland-core/crates/wcore-evolve/src/: curator_handoff.rs  error.rs  prompt_store.rs  schema_reward.rs
wayland-core/crates/wcore-evolve/tests/: evolve_bench_cli.rs  evolve_cli.rs  generation_budget.rs  graveyard_lineage.rs  llm_paraphrase_test.rs  mutator_determinism.rs  online_evolve_integration.rs  plateau_detection.rs
wayland-core/crates/wcore-pricing/: Cargo.toml
wayland-core/crates/wcore-swarm/: Cargo.toml
wayland-core/crates/wcore-swarm/src/: audit.rs  collect.rs  consensus.rs  debate.rs  dispatch.rs  error.rs  fleet.rs  heartbeat.rs  mesh.rs  scorer.rs  topology.rs  worktree.rs
wayland-core/crates/wcore-swarm/tests/: collision_test.rs  consensus_smoke.rs  debate_smoke.rs  dispatch_smoke.rs  heartbeat_test.rs  swarm_memory_e2e.rs  swarm_worker_failure_reporting_e2e.rs
(+3517 files in other folders)
