[package]
name = "wcore-pluginsrc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wcore-plugin-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
