[package]
name = "wcore-agents-pack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wcore-plugin-api = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
